Input原子组件，首页布局，搜索视图

--- a/划分组件.md
+++ b/划分组件.md
@@ -1,6 +1,4 @@
-按数据的来源可分为容器组件和展示组件
-容器组件：拥有自身状态并且传递给展示组件状态（包含共享同一数据的组件的容器）
-展示组件：没有自身状态，只接收状态
+组件：显示数据或操作状态的元素
 
 本项目的组件可以按以下划分
   容器组件：会员管理页组件、管理员管理页组件
