--- a/总结.md
+++ b/总结.md
@@ -1,2 +1,5 @@
-* 使用webpack配置时候应该不对node_modules等第三方的模块进行`智能分析`、`模块编译`、`插件处理`等操作，应该打进第三方包里
-* 对node_modules里第三方模块的css或项目css使用全局引用，如果使用了css modules，那么第三方或项目CSS在webpack配置里应该单独区分出来，不使用css modules
+1. 使用webpack配置时候应该不对node_modules等第三方的模块进行`智能分析`、`模块编译`、`插件处理`等操作，应该打进第三方包里
+2. 对node_modules里第三方模块的css或项目css使用全局引用，如果使用了css modules，那么第三方或项目CSS在webpack配置里应该单独区分出来，不使用css modules
+3. 对于ui相同，但内部结构不同的组件，应该写成可扩展，内部元素可通过
+4. 按数据类型来分，model可以分为基础model和前端交互model,如果基础model里面数据不需要提交到服务端，那么可以在model数据里增加前端交互的字段
+5. 要注意视图重绘后，原来的事件绑定无效
