button原子组件、Table原子组件

--- a/总结.md
+++ b/总结.md
@@ -3,3 +3,6 @@
 3. 对于ui相同，但内部结构不同的组件，应该写成可扩展，内部元素可通过
 4. 按数据类型来分，model可以分为基础model和前端交互model,如果基础model里面数据不需要提交到服务端，那么可以在model数据里增加前端交互的字段
 5. 要注意视图重绘后，原来的事件绑定无效
+6. 视图与视图之间不能嵌套，只能硬性的append
+7. 基于BB的ui组件，样式通过传入className设置
+8. 如果view只是一个实例，那可以在View的原型中加入model
