--- a/划分组件.md
+++ b/划分组件.md
@@ -2,4 +2,4 @@
 
 本项目的组件可以按以下划分
   容器组件：会员管理页组件、管理员管理页组件
-  展示组件：搜索组件、分页组件、对话框组件、表格组件、菜单组件、选项卡组件、表单组件、面包屑组件
+  展示组件：搜索组件、分页组件、对话框组件、表格组件、提交组件组件、文本框组件
