--- a/总结.md
+++ b/总结.md
@@ -10,3 +10,4 @@
   * 在translate做水平垂直居中的容器下定义需要进行移动的容器，并进行user-select: none，避免拖拽时候选择了文字造成异常
   * 对这个容器绑定mousedown事件，对document.body绑定mousemove和mouseup事件
   * 定义translatingX,translatingY(按下鼠标记录的当前移动容器的初始位置，便于在mousemove事件中的位置减去初始位置得到移动中的位置)、prevTranslateX,prevTranslateY(记录mousedown记录当前的translate，便于在移动过程中和mousemove移动的位置进行相加得到最终的位置), offsetX,offsetY(使用鼠标的位置-offset(鼠标离触发元素的位置)得到当前元素的位置)
+9. 使用translate(50%, 50%)，如果父元素为相对或绝对定位的元素如果没有高，那百分比就按照自身宽高
